--- a/src/app.scss
+++ b/src/app.scss
@@ -30,3 +30,11 @@ body {
         margin: 0;
     }
 }
+
+#app {
+    -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
+    background-color: var(--color-body-bg);
+    height: 100%;
+    display: flex;
+  }
