--- a/src/components/styles/sidebar.scss
+++ b/src/components/styles/sidebar.scss
@@ -7,6 +7,7 @@
     justify-content: space-between;
     border-radius: var(--border-radius-20);
     padding: 30px 0;
+    margin: 20px;
 
     &-top {
         display: flex;
@@ -33,7 +34,7 @@
                 cursor: pointer;
 
                 &:not(:last-child) {
-                    margin-bottom: 15px;
+                    margin-bottom: 20px;
                 }
 
                 &.icon {
