--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -4,15 +4,16 @@
     .top-bar {
         display: flex;
         justify-content: space-between;
-        padding: 40px 30px;
-        padding-left: 10px;
+        align-items: center;
+        padding-top: 20px;
 
         &__headline {
             font-family: var(--font-Poppins);
             color: var(--color-secondary);
             font-size: 36px;
-            line-height: 43px;
+            line-height: 50px;
             text-align: left;
+            padding: 20px 0;
             margin: 0 10px;
         }
 
@@ -22,6 +23,8 @@
             border-radius: 50px;
             padding: 5px;
             background-color: #FFF;
+            height: 40px;
+            margin-right: 30px;
 
             .grid,
             .list {
@@ -47,14 +50,52 @@
         }
     }
 
+    .cards {
+        height: calc(100vh - 110px);
+        overflow: auto;
+    }
+
     .cards-container {
-        height: calc(100% - 130px);
+        height: 1100px;
         overflow: auto;
         display: flex;
         flex-flow: column wrap;
-        max-height: 800px;
-        margin-left: -8px;
+
         /* Adjustment for the gutter */
         width: 100%;
+
+        /* Re-order items into 3 rows */
+        .card:nth-of-type(4n+1) {
+            order: 1;
+        }
+
+        .card:nth-of-type(4n+2) {
+            order: 2;
+        }
+
+        .card:nth-of-type(4n+3) {
+            order: 3;
+        }
+
+        .card:nth-of-type(4n) {
+            order: 4;
+        }
     }
+
+    /* Force new columns */
+    .break {
+        flex-basis: 100%;
+        width: 0;
+        margin: 0;
+        content: "";
+        padding: 0;
+    }
+
+    // .cards-container::before,
+    // .cards-container::after {
+    //     content: "";
+    //     flex-basis: 100%;
+    //     width: 0;
+    //     order: 2;
+    // }
 }
