--- a/src/components/styles/main.scss
+++ b/src/components/styles/main.scss
@@ -1,42 +1,49 @@
 .content {
     width: 100%;
 
-    .top-bar {
+    .top {
         display: flex;
-        justify-content: space-between;
-        align-items: center;
-        padding-top: 20px;
+        justify-content: center;
 
-        &__headline {
-            font-family: var(--font-Poppins);
-            color: var(--color-secondary);
-            font-size: 36px;
-            line-height: 50px;
-            text-align: left;
-            padding: 20px 0;
-            margin: 0 10px;
-        }
-
-        &__toggle {
+        .top-bar {
             display: flex;
+            justify-content: space-between;
             align-items: center;
-            border-radius: 50px;
-            padding: 5px;
-            background-color: #FFF;
-            height: 40px;
-            margin-right: 30px;
+            padding-top: 20px;
+            max-width: 1300px;
+            width: 100%;
 
-            .grid,
-            .list {
+            &__headline {
+                font-family: var(--font-Poppins);
+                color: var(--color-secondary);
+                font-size: 36px;
+                line-height: 50px;
+                text-align: left;
+                padding: 20px 0;
+                margin: 0 10px;
+            }
+
+            &__toggle {
+                display: flex;
+                align-items: center;
+                border-radius: 50px;
+                padding: 5px;
+                background-color: #FFF;
                 height: 40px;
-                width: 40px;
-                border-radius: 100%;
-                background-position: center;
-                background-repeat: no-repeat;
-                cursor: pointer;
+                margin-right: 30px;
 
-                &.active {
-                    background-color: var(--color-primary);
+                .grid,
+                .list {
+                    height: 40px;
+                    width: 40px;
+                    border-radius: 100%;
+                    background-position: center;
+                    background-repeat: no-repeat;
+                    cursor: pointer;
+
+                    &.active {
+                        background-color: var(--color-primary);
+                    }
                 }
             }
 
@@ -53,6 +60,8 @@
     .cards {
         height: calc(100vh - 110px);
         overflow: auto;
+        display: flex;
+        justify-content: center;
     }
 
     .cards-container {
@@ -60,6 +69,7 @@
         overflow: auto;
         display: flex;
         flex-flow: column wrap;
+        max-width: 1300px;
 
         /* Adjustment for the gutter */
         width: 100%;
@@ -90,12 +100,4 @@
         content: "";
         padding: 0;
     }
-
-    // .cards-container::before,
-    // .cards-container::after {
-    //     content: "";
-    //     flex-basis: 100%;
-    //     width: 0;
-    //     order: 2;
-    // }
 }
