--- a/src/components/styles/card.scss
+++ b/src/components/styles/card.scss
@@ -22,6 +22,10 @@
         .card-description {
             color: #C5D3E8;
         }
+
+        .checkbox-container {
+            visibility: visible;
+        }
     }
 
     &-image {
