--- a/src/components/styles/checkbox.scss
+++ b/src/components/styles/checkbox.scss
@@ -1,7 +1,8 @@
 .checkbox-container {
     position: absolute;
-    right: 30px;
-    top: 20px;
+    margin-left: 245px;
+    margin-top: 10px;
+    visibility: hidden;
 }
 
 .checkbox-round {
